--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>SWL View</title>
+    <link rel="icon" type="image/png" href="/static/icons/icon-512.png">
+    <link rel="apple-touch-icon" href="/static/icons/icon-512.png">
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
