--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
-    <h1>SWL View - EiBi Schedule</h1>
-    <p class="app-meta">Version {{ data.app_version }} | by {{ data.app_author }} | {{ data.app_copyright }}</p>
+    <div class="app-header-card">
+        <div class="app-title-row">
+            <img class="app-logo" src="/static/icons/icon-512.png" alt="SWL View logo">
+            <h1>SWL View - EiBi Schedule</h1>
+        </div>
+        <p class="app-meta">Version {{ data.app_version }} | by {{ data.app_author }} | {{ data.app_copyright }}</p>
+    </div>
     <div class="top-summary">
         <div class="top-meta">
             <div class="details-block">
