--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,7 +47,7 @@
             <div class="details-title">Support</div>
             <aside class="donation-details">
                 <h3>Support SWL View</h3>
-                <p>If this project helps, you can support future updates.</p>
+                <p>If you found this software useful, please consider supporting, thanks.</p>
                 <div class="donation-actions">
                     <a class="donation-btn paypal-btn" href="https://www.paypal.com/paypalme/JohnVincentBurns" target="_blank" rel="noopener noreferrer">PayPal.me</a>
                     <a class="donation-btn beer-btn" href="https://www.buymeacoffee.com/reflectingme" target="_blank" rel="noopener noreferrer">Buy Me A Beer</a>
